week 6 in progress

--- a/Week6-PhyloTraits/PhyloTraits_assignment.Rmd
+++ b/Week6-PhyloTraits/PhyloTraits_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Phylogenetic Diversity - Traits"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Michelle Benavidez; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -45,8 +45,16 @@ In the R code chunk below, provide the code to:
 4. load all of the required R packages (be sure to install if needed).  
 
 ```{r}
-
-
+rm(list = ls())
+getwd()
+setwd("~/GitHub/QB2017_Benavidez/Week6-PhyloTraits")
+package.list <- c("ape","seqinr","phylobase","adephylo","geiger","picante","stats","RColorBrewer","caper","phylolm","pmc","ggplot2","tidyr","dplyr","phangorn","pander")
+for (package in package.list){
+  if (!require(package, character.only = T, quietly = T)){
+    install.packages(package)
+    library(package, character.only = T)
+  }
+}
 ```
 
 ## 2) DESCRIPTION OF DATA
@@ -70,18 +78,23 @@ In the R code chunk below, do the following:
 4. plot the alignment using a grid to visualize rows of sequences.
 
 ```{r}
+read.aln <- read.alignment(file = "./data/p.isolates.afa", format = "fasta")
 
+p.DNAbin <- as.DNAbin(read.aln)
 
+window <- p.DNAbin[, 100:500]
+
+image.DNAbin(window, cex.lab = 0.50)
 ```
 
 ***Question 2***:  Make some observations about the `muscle` alignment of the 16S rRNA gene sequences for our bacterial isolates and the outgroup, *Methanosarcina*, a member of the domain archaea. 
 Move along the alignment by changing the values in the `window` object. 
 
-a. Approximately how long are our reads?  
+a. Approximately how long are our reads? 
 b. What regions do you think would are appropriate for phylogenetic inference and why?  
 
-> ***Answer 2a***:   
-> ***Answer 2b***:  
+> ***Answer 2a***:  ~400bp
+> ***Answer 2b***:  around 100bp, because this is where most of the bariation seems to exist 
 
 ## 4) MAKING A PHYLOGENETIC TREE
 
@@ -97,7 +110,17 @@ In the R code chunk below, do the following:
 4. plot the rooted tree. 
 
 ```{r}
+seq.dist.raw <- dist.dna(p.DNAbin, model = "raw", pairwise.deletion = F)
 
+nj.tree <- bionj(seq.dist.raw)
+outgroup <- match("Methanosarcina", nj.tree$tip.label)
+nj.rooted <- root(nj.tree, outgroup, resolve.root = T)
+
+par(mar = c(1,1,2,1) + 0.1)
+plot.phylo(nj.rooted, main = "Neighbor Joining Tree", "phylogram",
+           use.edge.length = F, direction = "right", cex = 0.6,
+           label.offset = 1)
+add.scale.bar(cex = 0.7)
 
 ```
 
@@ -117,7 +140,32 @@ In the R code chunk below, do the following:
 4. create a cophylogenetic plot to compare the topologies of the trees.
 
 ```{r}
+seq.dist.F84 <- dist.dna(p.DNAbin, model = "F84", pairwise.deletion = F)
 
+par(mar = c(5,5,2,1) + 0.1)
+plot(seq.dist.raw, seq.dist.F84,
+     pch = 20, col = "red", las = 1, asp = 1, xlim = c(0,0.7), ylim = c(0, 0.7),
+     xlab = "Raw Distance", ylab = "F84 Distance")
+abline(b = 1, a = 0, lty = 2)
+text(0.65, 0.6, "1:1")
+
+raw.tree <- bionj(seq.dist.raw)
+F84.tree <- bionj(seq.dist.F84)
+
+raw.outgroup <- match("Methanosarcina", raw.tree$tip.label)
+F84.outgroup <- match("Methanosarcina", F84.tree$tip.label)
+
+raw.rooted <- root(raw.tree, raw.outgroup, resolve.root = T)
+F84.rooted <- root(F84.tree, F84.outgroup, resolve.root = T)
+
+layout(matrix(c(1,2),1,2), width = c(1,1))
+par(mar = c(1,1,2,0))
+plot.phylo(raw.rooted, type = "phylogram", direction = "right", show.tip.label = T,
+           use.edge.length = F, adj = 0.5, cex = 0.6, label.offset = 2, main = "Raw")
+
+par(mar = c(1,0,2,1))
+plot.phylo(F84.rooted, type = "phylogram", direction = "left", show.tip.label = T,
+           use.edge.length = F, adj = 0.5, cex = 0.6, label.offset = 2, main = "F84")
 
 ```
 
@@ -129,8 +177,33 @@ In the R code chunk below, do the following:
 5. be sure to format, add appropriate labels, and customize each plot.
 
 ```{r}
+seq.dist.K80 <- dist.dna(p.DNAbin, model = "K80", pairwise.deletion = F)
+
+par(mar = c(5,5,2,1) + 0.1)
+plot(seq.dist.F84, seq.dist.K80,
+     pch = 20, col = "red", las = 1, asp = 1, xlim = c(0,0.7), ylim = c(0, 0.7),
+     xlab = "F84 Distance", ylab = "K80 Distance")
+abline(b = 1, a = 0, lty = 2)
+text(0.65, 0.6, "1:1")
 
 
+K80.tree <- bionj(seq.dist.K80)
+F84.tree <- bionj(seq.dist.F84)
+
+K80.outgroup <- match("Methanosarcina", K80.tree$tip.label)
+F84.outgroup <- match("Methanosarcina", F84.tree$tip.label)
+
+K80.rooted <- root(K80.tree, K80.outgroup, resolve.root = T)
+F84.rooted <- root(F84.tree, F84.outgroup, resolve.root = T)
+
+layout(matrix(c(1,2),1,2), width = c(1,1))
+par(mar = c(1,1,2,0))
+plot.phylo(K80.rooted, type = "phylogram", direction = "right", show.tip.label = T,
+           use.edge.length = F, adj = 0.5, cex = 0.6, label.offset = 2, main = "K80")
+
+par(mar = c(1,0,2,1))
+plot.phylo(F84.rooted, type = "phylogram", direction = "left", show.tip.label = T,
+           use.edge.length = F, adj = 0.5, cex = 0.6, label.offset = 2, main = "F84")
 ```
 
 ***Question 4***:  
@@ -151,8 +224,20 @@ In the R code chunk below, do the following:
 2. Plot bootstrap support values onto the tree
 
 ```{r}
+p.DNAbin.phyDat <- read.phyDat("./data/p.isolates.afa", format = "fasta", type = "DNA")
+fit <- pml(nj.rooted, data=p.DNAbin.phyDat)
 
+fitJC <- optim.pml(fit, T)
 
+fitGTR <- optim.pml(fitGTR, model = "GTR", optInv = T, optGamma = T,
+                    rearrangement = "NNI", control = pml.control(trace = 0))
+
+anova(fitJC, fitGTR)
+AIC(fitJC)
+AIC(fitGTR)
+
+bs = botstrap.pml(fitJC, bs = 100, optNni = T,
+                  control = pml.control(trace = 0))
 ```
 
 ***Question 5***:  
