--- a/Week7-PhyloCom/PhyloCom_assignment.Rmd
+++ b/Week7-PhyloCom/PhyloCom_assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Phylogenetic Diversity - Communities"
-author: "Student Name; Z620: Quantitative Biodiversity, Indiana University"
+author: "Michelle Benavidez; Z620: Quantitative Biodiversity, Indiana University"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 geometry: margin=2.54cm
@@ -41,15 +41,20 @@ In the R code chunk below, provide the code to:
 5. load the required R source file.
 
 ```{r}
+rm(list = ls())
+getwd() 
+setwd("~/GitHub/QB2017_Benavidez/Week7-PhyloCom/")
+
+package.list <- c('picante', 'ape', 'seqinr', 'vegan', 'fossil', 'simba')
+for (package in package.list) {
+  if (!require(package, character.only = TRUE, quietly = TRUE)) {
+    install.packages(package, repos='http://cran.us.r-project.org')
+    library(package, character.only = TRUE)
+  }
+}
 
 
-
-
-
-
-
-
-
+source("./bin/MothurTools.R")
 
 ```
 
@@ -71,8 +76,21 @@ In the R code chunk below, do the following:
 
 ```{r}
 
+env <- read.table("data/20130801_PondDataMod.csv", sep = ",", header = TRUE) 
+env <- na.omit(env)
 
+comm <- read.otu(shared = "./data/INPonds.final.rdp.shared", cutoff = "1")
 
+comm <- comm[grep("*-DNA", rownames(comm)), ]
+
+rownames(comm) <- gsub("\\-DNA", "", rownames(comm)) 
+rownames(comm) <- gsub("\\_", "", rownames(comm))
+
+comm <- comm[rownames(comm) %in% env$Sample_ID, ]
+
+comm <- comm[ , colSums(comm) > 0]
+
+tax <- read.tax(taxonomy = "./data/INPonds.final.rdp.1.cons.taxonomy")
 
 
 
@@ -91,11 +109,33 @@ Next, in the R code chunk below, do the following:
 9. plot the rooted tree.
 
 ```{r}
+ponds.cons <- read.alignment(file = "./data/INPonds.final.rdp.1.rep.fasta",
+                             format = "fasta")
+
+ponds.cons$nam <- gsub("\\|.*$", "", gsub("^.*?\t", "", ponds.cons$nam))
+
+outgroup <- read.alignment(file = "./data/methanosarcina.fasta", format = "fasta")
+
+DNAbin <- rbind(as.DNAbin(outgroup), as.DNAbin(ponds.cons))
+
+image.DNAbin(DNAbin, show.labels=T, cex.lab = 0.05, las = 1)
 
 
 
+seq.dist.jc <- dist.dna(DNAbin, model = "JC", pairwise.deletion = F)
 
+phy.all <- bionj(seq.dist.jc)
 
+phy <- drop.tip(phy.all, phy.all$tip.label[!phy.all$tip.label %in%
+                                             c(colnames(comm), "Methanosarcina")])
+
+outgroup <- match("Methanosarcina", phy$tip.label)
+
+phy <- root(phy, outgroup, resolve.root = TRUE)
+
+par(mar = c(1, 1, 2, 1) + 0.1)
+plot.phylo(phy, main = "Neighbor Joining Tree", "phylogram", show.tip.label = FALSE,
+           use.edge.length = FALSE, direction = "right", cex = 0.6, label.offset = 1)
 
 
 
@@ -109,6 +149,7 @@ In the R code chunk below, do the following:
 1. calculate Faith's D using the `pd()` function.
 
 ```{r}
+pd <- pd(comm, phy, include.root = FALSE)
 
 
 ```
@@ -119,9 +160,18 @@ In the R code chunk below, do the following:
 3. calculate the scaling exponent. 
 
 ```{r}
+par(mar = c(5, 5, 4, 1) + 0.1)
 
+plot(log(pd$S), log(pd$PD),
+     pch = 20, col = "red", las = 1,
+     xlab = "ln(S)", ylab = "ln(PD)", cex.main = 1,
+     main="Phylodiversity (PD) vs.Taxonomic richness (S)")
 
-
+fit <- lm('log(pd$PD) ~ log(pd$S)')
+abline(fit, col = "red", lw = 2)
+exponent <- round(coefficients(fit)[2], 2)
+legend("topleft", legend=paste("Scaling exponent = ", exponent, sep = ""),
+       bty = "n", lw = 2, col = "red")
 
 
 ```
@@ -132,10 +182,10 @@ b.  Describe the relationship between taxonomic richness and phylodiversity.
 c.  When would you expect these two estimates of diversity to deviate from one another? 
 d.  Interpret the significance of the scaling PD-S scaling exponent.
 
-> ***Answer 1a***:  
-> ***Answer 1b***:  
-> ***Answer 1c***:  
-> ***Answer 1d***: 
+> ***Answer 1a***:  PD is based on incidence data, so when estimating shared branch length sums it is directly associated with evolutionary taxa richness.  
+> ***Answer 1b***:  When you have a larger number of evolutionary diversgent taxa in the communitiy, you will have high PD values.  When you have fewer divergent taxa, you will have few shared branches; therefore you will have lower PD values.                                            
+> ***Answer 1c***:  Taxonomic rishness and and phyldivserity should deviate when....
+> ***Answer 1d***:  
 
 **i. Randomizations and Null Models**  
 
@@ -143,9 +193,8 @@ In the R code chunk below, do the following:
 1. estimate the standardized effect size of PD using the `richness` randomization method.  
 
 ```{r}
-
-
-
+ses.pd <- ses.pd(comm[1:2,], phy, null.model = "richness", runs = 25, 
+                 include.root = FALSE)
 
 ```
 
@@ -154,7 +203,7 @@ In the R code chunk below, do the following:
 a.  What are the null and alternative hypotheses you are testing via randomization when calculating `ses.pd`?
 b.  How did your choice of null model influence your observed ses.pd values?  Explain why this choice affected or did not affect the output. 
 
-> ***Answer 2a***:  
+> ***Answer 2a***:  The null model we are testing is richness, which is a randomized community matrix based on the sample pool - this model keeps constant the fequency of species occurences.    
 > ***Answer 2b***:  
 
 ### B.  Phylogenetic Dispersion Within a Sample
@@ -166,8 +215,7 @@ In the R code chunk below, do the following:
 1. calculate the phylogenetic resemblance matrix for taxa in the Indiana ponds data set.
 
 ```{r}
-
-
+phydist <- cophenetic.phylo(phy)
 ```
 
 **ii.  Net Relatedness Index (NRI)**
@@ -176,11 +224,12 @@ In the R code chunk below, do the following:
 1. Calculate the NRI for each site in the Indiana ponds data set. 
 
 ```{r}
+ses.mpd <- ses.mpd(comm, phydist, null.model = "taxa.labels", 
+                   abundance.weighted = FALSE, runs = 25)
 
-
-
-
-
+NRI <- as.matrix(-1 * ((ses.mpd[,2] - ses.mpd[,3]) / ses.mpd[,4])) 
+rownames(NRI) <- row.names(ses.mpd)
+colnames(NRI) <- "NRI"
 
 ```
 
@@ -190,9 +239,13 @@ In the R code chunk below, do the following:
 1. Calculate the NTI for each site in the Indiana ponds data set. 
 
 ```{r}
+ses.mntd <- ses.mntd(comm, phydist, null.model = "taxa.labels", 
+                     abundance.weighted = FALSE, runs = 25)
 
+NTI <- as.matrix(-1 * ((ses.mntd[,2] - ses.mntd[,3]) / ses.mntd[,4]))
 
-
+rownames(NTI) <- row.names(ses.mntd) 
+colnames(NTI) <- "NTI"
 ```
 
 ***Question 3***: 
@@ -217,21 +270,20 @@ In the R code chunk below, do the following:
 2. calculate the phylogenetically based community resemblance matrix using UniFrac distance.
 
 ```{r}
-
-
-
-
+dist.mp <- comdist(comm, phydist)
+dist.uf <- unifrac(comm, phy)
 ```
 
 In the R code chunk below, do the following:  
 1. plot Mean Pair Distance versus UniFrac distance and compare.
 
 ```{r}
-
-
-
-
-
+par(mar = c(5, 5, 2, 1) + 0.1) 
+plot(dist.mp, dist.uf,
+     pch = 20, col = "red", las = 1, asp = 1, xlim = c(0.15, 0.5), ylim = c(0.15, 0.5),
+     xlab = "Mean Pair Distance", ylab = "UniFrac Distance") 
+abline(b = 1, a = 0, lty = 2)
+text(0.5, 0.47, "1:1")
 ```
 
 ***Question 4***: 
@@ -255,11 +307,11 @@ In the R code chunk below, do the following:
 2. calculate the explained variation for the first three PCoA axes.
 
 ```{r}
-
-
-
-
-
+pond.pcoa <- cmdscale(dist.uf, eig = T, k = 3)
+explainvar1 <- round(pond.pcoa$eig[1] / sum(pond.pcoa$eig), 3) * 100 
+explainvar2 <- round(pond.pcoa$eig[2] / sum(pond.pcoa$eig), 3) * 100 
+explainvar3 <- round(pond.pcoa$eig[3] / sum(pond.pcoa$eig), 3) * 100 
+sum.eig <- sum(explainvar1, explainvar2, explainvar3)
 
 ```
 
@@ -272,23 +324,32 @@ In the R code chunk below, do the following:
 4. customize the plot. 
 
 ```{r}
+par(mar = c(5, 5, 1, 2) + 0.1)
 
+plot(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2],
+     xlim = c(-0.2, 0.2), ylim = c(-.16, 0.16),
+     xlab = paste("PCoA 1 (", explainvar1, "%)", sep = ""),
+     ylab = paste("PCoA 2 (", explainvar2, "%)", sep = ""),
+     pch = 16, cex = 2.0, type = "n", cex.lab = 1.5, cex.axis = 1.2, axes = FALSE)
 
+axis(side = 1, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+axis(side = 2, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+abline(h = 0, v = 0, lty = 3)
+box(lwd = 2)
 
-
-
-
-
-
-
-
-
-
+points(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2], 
+       pch = 19, cex = 3, bg = "gray", col = "gray")
+text(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2], 
+     labels = row.names(pond.pcoa$points))
 ```
 
 In the following R code chunk:
 1. perform another PCoA on taxonomic data using an appropriate measure of dissimilarity, and
 2. calculate the explained variation on the first three PCoA axes. 
+```{r}
+
+```
+
 
 ***Question 5***: Using a combination of visualization tools and percent variation explained, how does the phylogenetically based ordination compare or contrast with the taxonomic ordination? What does this tell you about the importance of phylogenetic information in this system?
 
@@ -302,10 +363,13 @@ In the R code chunk below, do the following:
 1. test the hypothesis that watershed has an effect on the phylogenetic diversity of bacterial communities.
 
 ```{r}
-
-
-
-
+watershed <- env$Location
+adonis(dist.uf ~ watershed, permutations = 999)
+adonis(
+  vegdist( 
+    decostand(comm, method = "log"), 
+    method = "bray") ~ watershed, 
+  permutations = 999)
 
 ```
 
@@ -316,18 +380,16 @@ In the R code chunk below, do the following:
 2. calculate environmental distance between ponds based on the Euclidean distance between sites in the environmental data matrix (after transforming and centering using `scale()`).
 
 ```{r}
-
-
-
-
+envs <- env[, 5:19]
+envs <- envs[, -which(names(envs) %in% c("TDS", "Salinity", "Cal_Volume"))]
+env.dist <- vegdist(scale(envs), method = "euclid")
 ```
 
 In the R code chunk below, do the following:  
 1. conduct a Mantel test to evaluate whether or not UniFrac distance is correlated with environmental variation.
 
 ```{r}
-
-
+mantel(dist.uf, env.dist)
 ```
 
 Last, conduct a distance-based Redundancy Analysis (dbRDA). 
@@ -338,16 +400,44 @@ In the R code chunk below, do the following:
 3. plot the dbRDA results
 
 ```{r}
+ponds.dbrda <- vegan::dbrda(dist.uf ~ ., data = as.data.frame(scale(envs)))
 
+anova(ponds.dbrda, by = "axis")
+ponds.fit <- envfit(ponds.dbrda, envs, perm = 999) 
+ponds.fit
 
+dbrda.explainvar1 <- round(ponds.dbrda$CCA$eig[1] /
+                             sum(c(ponds.dbrda$CCA$eig, ponds.dbrda$CA$eig)), 3) * 100
+dbrda.explainvar2 <- round(ponds.dbrda$CCA$eig[2] /
+                             sum(c(ponds.dbrda$CCA$eig, ponds.dbrda$CA$eig)), 3) * 100
 
+par(mar = c(5, 5, 4, 4) + 0.1)
 
+plot(scores(ponds.dbrda, display = "wa"), xlim = c(-2, 2), ylim = c(-2, 2), 
+     xlab = paste("dbRDA 1 (", dbrda.explainvar1, "%)", sep = ""),
+     ylab = paste("dbRDA 2 (", dbrda.explainvar2, "%)", sep = ""),
+     pch = 16, cex = 2.0, type = "n", cex.lab = 1.5, cex.axis = 1.2, axes = FALSE)
 
+axis(side = 1, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+axis(side = 2, labels = T, lwd.ticks = 2, cex.axis = 1.2, las = 1) 
+abline(h = 0, v = 0, lty = 3)
+box(lwd = 2)
 
+points(scores(ponds.dbrda, display = "wa"),
+       pch = 19, cex = 3, bg = "gray", col = "gray")
+text(scores(ponds.dbrda, display = "wa"),
+     labels = row.names(scores(ponds.dbrda, display = "wa")), cex = 0.5)
 
+vectors <- scores(ponds.dbrda, display = "bp")
 
-
-
+arrows(0, 0, vectors[,1] * 2, vectors[, 2] * 2,
+       lwd = 2, lty = 1, length = 0.2, col = "red") 
+text(vectors[,1] * 2, vectors[, 2] * 2, pos = 3,
+     labels = row.names(vectors))
+axis(side = 3, lwd.ticks = 2, cex.axis = 1.2, las = 1, col = "red", lwd = 2.2,
+     at = pretty(range(vectors[, 1])) * 2, labels = pretty(range(vectors[, 1]))) 
+axis(side = 4, lwd.ticks = 2, cex.axis = 1.2, las = 1, col = "red", lwd = 2.2,at = pretty(range(vectors[, 2])) * 2, labels =
+       pretty(range(vectors[, 2])))
 ```
 
 ***Question 6***: Based on the multivariate procedures conducted above, describe the phylogenetic patterns of $\beta$-diversity for bacterial communities in the Indiana ponds.   
@@ -367,15 +457,21 @@ In the R code chunk below, do the following:
 4. create a dataframe that includes all of the above information. 
 
 ```{r}
+long.lat <- as.matrix(cbind(env$long, env$lat)) 
+coord.dist <- earth.dist(long.lat, dist = TRUE)
 
+bray.curtis.dist <- 1 - vegdist(comm)
 
+unifrac.dist <- 1 - dist.uf
 
+unifrac.dist.ls <- liste(unifrac.dist, entry = "unifrac") 
+bray.curtis.dist.ls <- liste(bray.curtis.dist, entry = "bray.curtis") 
+coord.dist.ls <- liste(coord.dist, entry = "geo.dist")
+env.dist.ls <- liste(env.dist, entry = "env.dist")
 
-
-
-
-
-
+df <- data.frame(coord.dist.ls, bray.curtis.dist.ls[, 3], unifrac.dist.ls[, 3], 
+                 env.dist.ls[, 3])
+names(df)[4:6] <- c("bray.curtis", "unifrac", "env.dist")
 ```
 
 Now, let's plot the DD relationships:  
@@ -385,23 +481,34 @@ In the R code chunk below, do the following:
 3. add trend lines to each.
 
 ```{r}
+par(mfrow=c(2, 1), mar = c(1, 5, 2, 1) + 0.1, oma = c(2, 0, 0, 0))
+
+plot(df$geo.dist, df$bray.curtis, xlab = "", xaxt = "n", las = 1, ylim = c(0.1, 0.9),
+     ylab="Bray-Curtis Similarity",
+     main = "Distance Decay", col = "SteelBlue")
+
+DD.reg.bc <- lm(df$bray.curtis ~ df$geo.dist) 
+summary(DD.reg.bc)
+abline(DD.reg.bc , col = "red4", lwd = 2)
 
 
+par(mar = c(2, 5, 1, 1) + 0.1)
 
+plot(df$geo.dist, df$unifrac, xlab = "", las = 1, ylim = c(0.1, 0.9), 
+     ylab = "Unifrac Similarity", col = "darkorchid4")
 
+DD.reg.uni <- lm(df$unifrac ~ df$geo.dist) 
+summary(DD.reg.uni)
+abline(DD.reg.uni, col = "red4", lwd = 2)
 
-
-
-
-
+mtext("Geographic Distance (km)", side = 1, adj = 0.55, 
+      line = 0.5, outer = TRUE)
 ```
 
 In the R code chunk below, test if the trend lines in the above distance decay relationships are different from one another.
 
 ```{r}
-
-
-
+diffslope(df$geo.dist, df$unifrac, df$geo.dist, df$bray.curtis)
 ```
 
 ***Question 7***: Interpret the slopes from the taxonomic and phylogenetic DD relationships. If there are differences, hypothesize why this might be.   
@@ -416,15 +523,32 @@ In the R code chunk below, test if the trend lines in the above distance decay r
 In the R code chunk below, write a function to generate the PDAR.
 
 ```{r}
-
-
-
-
-
-
-
-
-
+PDAR <- function(comm, tree){
+  areas <- c() 
+  diversity <- c()
+  num.plots <- c(2, 4, 8, 16, 32, 51)
+  for (i in num.plots){
+    areas.iter <- c() 
+    diversity.iter <- c()
+    for (j in 1:10){
+      pond.sample <- sample(51, replace = FALSE, size = i)
+      area <- 0 
+      sites <- c()
+      for (k in pond.sample) {
+        area <- area + pond.areas[k]
+        sites <- rbind(sites, comm[k, ])
+      }
+      areas.iter <- c(areas.iter, area)
+      psv.vals <- psv(sites, tree, compute.var = FALSE) 
+      psv <- psv.vals$PSVs[1]
+      diversity.iter <- c(diversity.iter, as.numeric(psv)) 
+    }
+    diversity <- c(diversity, mean(diversity.iter))
+    areas <- c(areas, mean(areas.iter))
+    print(c(i, mean(diversity.iter), mean(areas.iter)))
+  }
+  return(cbind(areas, diversity)) 
+  }
 ```
 
 **ii. Evaluating the PDAR**
@@ -437,12 +561,29 @@ In the R code chunk below, do the following:
 5. customize the PDAR plot. 
 
 ```{r}
+pond.areas <- as.vector(pi * (env$Diameter/2)^2)
 
+pdar <- PDAR(comm, phy)
+pdar <- as.data.frame(pdar)
+pdar$areas <- sqrt(pdar$areas)
 
+Pearson <- cor.test(pdar$areas, pdar$diversity, method = "pearson")
+P <- round(Pearson$estimate, 2)
+P.pval <- round(Pearson$p.value, 3)
 
+Spearman <- cor.test(pdar$areas, pdar$diversity, method = "spearman")
+rho <- round(Spearman$estimate, 2)
+rho.pval <- round(Spearman$p.value, 3)
 
+plot.new()
+par(mfrow=c(1, 1), mar = c(1, 5, 2, 1) + 0.1, oma = c(2, 0, 0, 0)) 
+plot(pdar[, 1], pdar[, 2], xlab = "Area", ylab = "PSV", ylim = c(0, 1),
+     main = "Phylogenetic Diversity-Area Relationship",
+     col = "red", pch = 16, las = 1)
 
-
+legend("topleft", legend= c(paste("Spearman Correlation = ", rho, "; p = ", rho.pval, sep = ""),
+                                  paste("Pearson Correlation = ", P, "; p = ", P.pval, sep = "")),
+                                  bty = "n", col = "red")
 
 ```
 
