--- a/Week7-PhyloCom/PhyloCom_assignment.Rmd
+++ b/Week7-PhyloCom/PhyloCom_assignment.Rmd
@@ -182,9 +182,9 @@ c.  When would you expect these two estimates of diversity to deviate from one a
 d.  Interpret the significance of the scaling PD-S scaling exponent.
 
 > ***Answer 1a***:  PD is based on incidence data, so when estimating shared branch length sums it is directly associated with evolutionary taxa richness.  
-> ***Answer 1b***:  When you have a larger number of evolutionary diversgent taxa in the communitiy, you will have high PD values.  When you have fewer divergent taxa, you will have few shared branches; therefore you will have lower PD values.                                            
+> ***Answer 1b***:  When you have a larger number of evolutionary diversgent taxa in the communitiy, you will have high PD values.  When you have fewer divergent taxa, you will have few shared branches; therefore you will have lower PD values.                                       
 > ***Answer 1c***:  Taxonomic rishness and and phyldivserity should deviate when....
-> ***Answer 1d***:  
+> ***Answer 1d***: Pd-S tells us that the relationship between PD (evolutionary diversity metric) and S (ruchness metric) scales to a strength of 0.75.  
 
 
 **i. Randomizations and Null Models**  
@@ -197,7 +197,11 @@ In the R code chunk below, do the following:
 ses.pd <- ses.pd(comm[1:2,], phy, null.model = "richness", runs = 25, 
                  include.root = FALSE)
 
+ses.pd.1 <- ses.pd(comm[1:2,], phy, null.model = "independentswap", runs = 25, 
+                 include.root = FALSE)
 
+ses.pd.2 <- ses.pd(comm[1:2,], phy, null.model = "trialswap", runs = 25, 
+                 include.root = FALSE)
 ```
 
 ***Question 2***: Using `help()` and the table above, run the `ses.pd()` function using two other null models and answer the following questions:
@@ -238,6 +242,12 @@ rownames(NRI) <- row.names(ses.mpd)
 colnames(NRI) <- "NRI"
 
 
+ses.mpd.1 <- ses.mpd(comm, phydist, null.model = "taxa.labels", 
+                   abundance.weighted = T, runs = 25)
+
+NRI.1 <- as.matrix(-1 * ((ses.mpd.1[,2] - ses.mpd.1[,3]) / ses.mpd.1[,4])) 
+rownames(NRI.1) <- row.names(ses.mpd.1)
+colnames(NRI.1) <- "NRI.1"
 ```
 
 **iii.  Nearest Taxon Index (NTI)**
@@ -255,6 +265,14 @@ NTI <- as.matrix(-1 * ((ses.mntd[,2] - ses.mntd[,3]) / ses.mntd[,4]))
 rownames(NTI) <- row.names(ses.mntd) 
 colnames(NTI) <- "NTI"
 
+
+ses.mntd.1 <- ses.mntd(comm, phydist, null.model = "taxa.labels", 
+                     abundance.weighted = T, runs = 25)
+
+NTI.1 <- as.matrix(-1 * ((ses.mntd.1[,2] - ses.mntd.1[,3]) / ses.mntd.1[,4]))
+
+rownames(NTI.1) <- row.names(ses.mntd.1) 
+colnames(NTI.1) <- "NTI"
 ```
 
 ***Question 3***: 
@@ -266,8 +284,8 @@ d. In the NRI and NTI examples above, the arguments "abundance.weighted = FALSE"
 Modify and rerun the code so that NRI and NTI are calculated using abundance data. 
 How does this affect the interpretation of NRI and NTI?
 
-> ***Answer 3a***:  
-> ***Answer 3b***:  
+> ***Answer 3a***: Net Relatedness Index - This seems essentially to be a measure of phylogenetic diversity.  It measures the liklihood that species in a dataset are more closely related than you would expect by random chance - so in other words NRI tests for overdispersion or clustering within a dataset.   
+> ***Answer 3b***:  Nearest Taxon Index - This is basically the same thing as NRI except that it uses mean distances to the nearest phylogenetic neighbor instead of the mean phylogenetic distance that NRI uses.  
 > ***Answer 3c***:  
 > ***Answer 3d***:  
 
@@ -307,9 +325,9 @@ Note: we are calculating unweighted phylogenetic distances (similar to incidence
 That means that we are not taking into account the abundance of each taxon in each site.
 c. Why might MPD show less variation than UniFrac?
 
-> ***Answer 4a***: 
-> ***Answer 4b***: 
-> ***Answer 4c***:
+> ***Answer 4a***: Both mean pair distance and unifrqac distance are methods to calculate the phylogenetic distance between two samples, however they are mathamatically different.  Mean pairwise difference uses the average phylogenetic difference between samples while unifrac uses the ratio of unshared branch lengths to the total branch lengths in a rooted tree. 
+> ***Answer 4b***: There is a narrow range of variation in mean pair distance and wide variation in unifrac distances.
+> ***Answer 4c***: XXX Mean pair distance show less variation because it is measuring averages between pairs of samples while unifrac is measuring distance ratios between pairs of samples.
 
 
 ### B. Visualizing Phylogenetic Beta-Diversity
@@ -354,7 +372,7 @@ abline(h = 0, v = 0, lty = 3)
 box(lwd = 2)
 
 points(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2], 
-       pch = 19, cex = 3, bg = "gray", col = "gray")
+       pch = 20, cex = 2, bg = "grey", col = "red")
 text(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2], 
      labels = row.names(pond.pcoa$points))
 
@@ -363,14 +381,6 @@ text(pond.pcoa$points[ ,1], pond.pcoa$points[ ,2],
 In the following R code chunk:
 1. perform another PCoA on taxonomic data using an appropriate measure of dissimilarity, and
 2. calculate the explained variation on the first three PCoA axes. 
-
-=======
-```{r}
-
-```
-
-
-=======
 
 
 ***Question 5***: Using a combination of visualization tools and percent variation explained, how does the phylogenetically based ordination compare or contrast with the taxonomic ordination? What does this tell you about the importance of phylogenetic information in this system?
